--- a/IdentittVault/appsettings.Development.json
+++ b/IdentittVault/appsettings.Development.json
@@ -7,9 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    //If running in localhost
     "DefaultConnection": "server=localhost;port=3306;database=IdentittVault;username=root",
-    //The server address must be the same of the mysql container name
-    "DockerConnection": "server=identitt-compose_db_1;port=3306;database=IdentittVault;username=root"
+    "DockerConnection": "server=identitt_db_1;port=3306;database=IdentittVault;username=root"
   }
 }
