--- a/IdentittVault/appsettings.Development.json
+++ b/IdentittVault/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=IdentittVault;username=root",
-    "DockerConnection": "server=identitt_db_1;port=3306;database=IdentittVault;username=root"
+    "DockerConnection": "server=identittvault_db_1;port=3306;database=IdentittVault;username=root"
   }
 }
